actualizando el readme

--- a/src/stylesheets/screen.css
+++ b/src/stylesheets/screen.css
@@ -2,12 +2,14 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 19, ../sass/screen.scss */
+@import url("https://fonts.googleapis.com/css?family=Cantarell");
+@import url("https://fonts.googleapis.com/css?family=Orbitron");
+/* line 22, ../sass/screen.scss */
 body {
   margin: 0px;
 }
 
-/* line 22, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 .one-page {
   position: absolute;
   height: 100%;
@@ -15,57 +17,145 @@ body {
   min-height: 500px;
 }
 
-/* line 29, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 .aside {
+  position: fixed;
   float: left;
   height: 100%;
   width: 20%;
 }
-/* line 33, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 .aside ul {
   height: 100%;
   padding: 0px;
   margin: 0px;
-  background: #ffff00;
+  background: #000000;
 }
-/* line 38, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 .aside ul li {
   list-style-type: none;
-  border-bottom: 1px solid #76ff03;
+  border-bottom: 1px solid #cabf45;
 }
-/* line 41, ../sass/screen.scss */
+/* line 45, ../sass/screen.scss */
 .aside ul li a {
   display: block;
   text-decoration: none;
   font-size: 15pt;
   display: block;
   padding: 20px;
-  color: #193600;
+  color: #a99800;
   transition: color 1s, background 1s;
 }
-/* line 49, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 .aside ul li a .f-right {
   float: right;
 }
-/* line 52, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 .aside ul li a:hover {
-  color: #010300;
-  background: #b0ff57;
+  color: #766a00;
+  background: #ffffa8;
 }
 
-/* line 61, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 .cont-web {
   position: relative;
-  float: left;
-  background-image: url("../image/background-verde.jpg");
+  float: right;
+  background-image: url("../image/background-frm.jpg");
   height: 100%;
   width: 80%;
 }
-/* line 67, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
+.cont-web .frmhome {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+/* line 75, ../sass/screen.scss */
+.cont-web .frmhome .conten1 {
+  height: 350px;
+  background-image: url("../image/background-home.png");
+  background-size: 100% auto;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+/* line 81, ../sass/screen.scss */
+.cont-web .frmhome .conten1 h1 {
+  margin: 0px;
+  font-family: 'Orbitron', sans-serif;
+  text-align: center;
+  color: aliceblue;
+  padding: 45px;
+}
+/* line 88, ../sass/screen.scss */
+.cont-web .frmhome .conten1 p {
+  margin-top: 15px;
+  text-align: center;
+  color: white;
+  background: rgba(88, 180, 233, 0.9);
+  font-size: 17pt;
+  width: 400px;
+  margin: auto;
+  padding: 25px;
+  border-radius: 25px;
+}
+/* line 101, ../sass/screen.scss */
+.cont-web .frmhome .conten2 {
+  position: relative;
+  height: 300px;
+  background: #f0f2f3;
+}
+/* line 106, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card1 {
+  position: absolute;
+  height: 230px;
+  width: 220px;
+  background: #ce2a8f;
+  margin: 30px;
+  right: 50%;
+}
+/* line 113, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card1 p {
+  background: chocolate;
+  text-align: center;
+}
+/* line 116, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card1 p i {
+  font-size: 40pt;
+}
+/* line 120, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card1 h2 {
+  text-align: center;
+  font-size: 20pt;
+}
+/* line 126, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card2 {
+  position: absolute;
+  height: 230px;
+  width: 220px;
+  background: #2fd4f1;
+  margin: 30px;
+  left: 50%;
+}
+/* line 133, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card2 p {
+  background: #cabf45;
+  text-align: center;
+}
+/* line 137, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card2 i {
+  font-size: 40pt;
+  text-align: center;
+}
+/* line 141, ../sass/screen.scss */
+.cont-web .frmhome .conten2 .card2 h2 {
+  text-align: center;
+  font-size: 20pt;
+}
+/* line 150, ../sass/screen.scss */
 .cont-web .frm1 {
   position: absolute;
   float: left;
-  background: #b0ff57;
+  background: #ffffa8;
   height: 440px;
   width: 500px;
   bottom: 50%;
@@ -75,70 +165,70 @@ body {
   border-radius: 15px;
   font-size: 15pt;
 }
-/* line 79, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 .cont-web .frm1 header {
   border-bottom: solid 1px black;
   margin-top: 8px;
   text-align: center;
 }
-/* line 84, ../sass/screen.scss */
+/* line 167, ../sass/screen.scss */
 .cont-web .frm1 .cont {
   margin-top: 20px;
   text-align: center;
 }
-/* line 87, ../sass/screen.scss */
+/* line 170, ../sass/screen.scss */
 .cont-web .frm1 .cont input, .cont-web .frm1 .cont textarea {
-  background: #b0ff57;
+  background: #ffffa8;
   padding: 5px;
   font-size: 13pt;
   transition: background 1s;
 }
-/* line 92, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .cont-web .frm1 .cont input.err, .cont-web .frm1 .cont textarea.err {
   background: #fb8679;
 }
-/* line 95, ../sass/screen.scss */
+/* line 178, ../sass/screen.scss */
 .cont-web .frm1 .cont input.efec_console, .cont-web .frm1 .cont textarea.efec_console {
   background: black;
   color: white;
 }
-/* line 100, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .cont-web .frm1 .cont .btn {
-  background: #ffff5a;
+  background: #8bf6ff;
   padding: 8px 25px;
 }
 
-/* line 107, ../sass/screen.scss */
+/* line 191, ../sass/screen.scss */
 .b-radio {
   border-radius: 5px;
 }
 
 @media screen and (max-width: 768px) {
-  /* line 113, ../sass/screen.scss */
+  /* line 197, ../sass/screen.scss */
   .cont-web .frm1 {
     width: 360px;
     margin-right: -180px;
   }
 
-  /* line 119, ../sass/screen.scss */
+  /* line 203, ../sass/screen.scss */
   .aside ul li a {
     text-align: center;
   }
-  /* line 121, ../sass/screen.scss */
+  /* line 205, ../sass/screen.scss */
   .aside ul li a span {
     display: none;
   }
-  /* line 124, ../sass/screen.scss */
+  /* line 208, ../sass/screen.scss */
   .aside ul li a .f-right {
     display: none;
   }
 
-  /* line 127, ../sass/screen.scss */
+  /* line 211, ../sass/screen.scss */
   .aside {
     width: 15%;
   }
 
-  /* line 130, ../sass/screen.scss */
+  /* line 214, ../sass/screen.scss */
   .cont-web {
     width: 85%;
   }
