--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -2,15 +2,18 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
+ 
 //@import "compass/reset";
-$p-color: #ffff00;
-$p-light:#ffff5a;
-$p-dark:#c7cc00;
+@import url('https://fonts.googleapis.com/css?family=Cantarell');
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
 
-$s-color:#76ff03;
-$s-light:#b0ff57;
-$s-dark:#32cb00;
+$p-color: #4fc3f7;
+$p-light:#8bf6ff;
+$p-dark:#0093c4;
+
+$s-color:#fff176;
+$s-light:#ffffa8;
+$s-dark:#cabf45;
 
 $p-text:#000000;
 
@@ -27,6 +30,7 @@ body{
 }
 
 .aside{
+    position: fixed;
     float: left;
     height: 100%;
     width: 20%;
@@ -34,10 +38,10 @@ body{
         height: 100%;
         padding: 0px;
         margin: 0px;
-        background: $p-color;
+        background: $p-text;
         & li{
             list-style-type: none;
-            border-bottom: 1px solid $s-color;
+            border-bottom: 1px solid $s-dark;
             & a{
                 display: block;
                 text-decoration: none;
@@ -60,10 +64,89 @@ body{
 
 .cont-web{
     position: relative;
-    float: left;
-    background-image: url("../image/background-verde.jpg");
+    float: right;
+    background-image: url("../image/background-frm.jpg");
     height: 100%;
     width: 80%;
+    .frmhome{
+        height: 100%; 
+        width: 100%;
+        position: absolute;
+        .conten1{
+            height: 350px;
+            background-image: url("../image/background-home.png");
+            background-size: 100% auto;
+            background-position: center;
+            background-repeat: no-repeat;
+            h1{
+                margin: 0px;
+                font-family: 'Orbitron', sans-serif;
+                text-align: center;
+                color: aliceblue;
+                padding: 45px;
+            }
+            p{  
+                margin-top: 15px;
+                text-align: center;
+                color: white;
+                background: rgba(88, 180, 233, 0.9) ;
+                font-size: 17pt;
+                width: 400px;
+                margin:auto;
+                padding: 25px;
+                border-radius:25px;
+                
+            }
+        }
+        .conten2{
+            position: relative;
+            height: 300px;
+            background: #f0f2f3;
+
+            .card1{
+                position: absolute;
+                height: 230px;
+                width: 220px;
+                background: #ce2a8f;
+                margin: 30px;
+                right: 50%;
+                p{
+                    background: chocolate;
+                    text-align: center;
+                    i{
+                        font-size: 40pt;
+                    }
+                }
+                h2{
+                    text-align: center;
+                    font-size: 20pt;
+                }
+            
+            }
+            .card2{
+                 position: absolute;
+                 height: 230px;
+                 width: 220px;
+                 background: #2fd4f1;
+                 margin: 30px;
+                 left: 50%;
+                p{
+                    background: #cabf45;
+                    text-align: center;
+                }   
+                i{
+                    font-size: 40pt;
+                    text-align: center;
+                }   
+                h2{
+                    text-align: center;
+                    font-size: 20pt;
+                }
+              
+            }
+
+        }
+    }
     .frm1{
         position: absolute;
         float: left;
@@ -101,6 +184,7 @@ body{
                 background: $p-light;
                 padding: 8px 25px;
             }
+            
         }
     }
 }
@@ -130,6 +214,4 @@ body{
     .cont-web{
         width: 85%;
     }
-
-
 }
